// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Account/Forms/Modal Change password 1`] = `
.c12 {
  display: block;
  border: 1px solid #e2e2e2;
  border-radius: 4px;
  box-sizing: border-box;
  font: 400 16px / 1 "Lato",sans-serif;
  outline: none;
  padding: 10px 16px;
  position: relative;
  width: 100%;
}

.c12:focus {
  border-color: #bce7f6;
  background-color: #f2fbfc;
}

.c12:hover {
  background-color: #f2fbfc;
}

.c12:invalid {
  box-shadow: none;
}

.c10 .c11:first-of-type {
  margin-top: 4px;
}

.c10 .c11:last-of-type {
  margin-bottom: 4px;
}

.c10 .c11:not(:first-of-type) {
  margin-top: -1px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c10 .c11:not(:last-of-type) {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  margin-bottom: 0;
}

.c10 .c11:not(:last-of-type):focus + .c11 {
  border-top-color: #bce7f6;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c3 svg + span {
  margin-left: 4px;
}

.c14 {
  color: #fff;
  background-color: #0d79d0;
  border-color: #0d79d0;
}

.c14:not([disabled]):hover,
.c14:not([disabled]):focus {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c14:not([disabled]):active {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c4 {
  padding: 0;
  height: 40px;
  width: 40px;
}

.c5 {
  color: #353535;
  background-color: transparent;
  border-color: transparent;
}

.c5:not([disabled]):hover,
.c5:not([disabled]):focus {
  color: #1a9bc7;
  background-color: transparent;
  border-color: transparent;
}

.c5:not([disabled]):active {
  color: #0d79d0;
  background-color: transparent;
  border-color: transparent;
}

.c6 {
  background: #fff;
  border: 5px solid #fff !important;
  border-radius: 50%;
  box-sizing: border-box;
  box-shadow: 0 0 8px 0 rgba(0,0,0,0.12);
  display: inline-block;
  height: 40px;
  padding: 0;
  position: relative;
  width: 40px;
  -webkit-transition: border-color 0.25s;
  transition: border-color 0.25s;
}

.c6:focus,
.c6:hover {
  background: #f2fbfc !important;
}

.c6 svg {
  max-height: 16px;
  max-width: 16px;
  vertical-align: middle;
}

.c1 {
  background: #fff;
  border-radius: 8px;
  box-shadow: 0 4px 9px 0 rgba(84,83,83,0.3);
  font-family: "Lato",sans-serif;
  overflow: hidden;
  margin: 12px;
}

.c2 {
  position: absolute;
  right: 0;
  top: 0;
  z-index: 1;
}

.c7 {
  box-shadow: none;
  text-indent: -99999px;
}

.c7::before,
.c7::after {
  background-color: #6e6e6e;
  border-radius: 2px;
  content: ' ';
  display: block;
  height: 14px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  width: 2px;
  position: absolute;
  top: calc(50% - 7px);
  left: calc(50% - 1px);
}

.c7::after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c8 {
  padding: 16px;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c9 {
  font-size: 20px;
  margin-bottom: 20px;
}

.c13 {
  margin-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
  className="c0"
>
  <div>
    <div>
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <button
            className="c3 c4 c5 c6 c7"
            onClick={[Function]}
            type="button"
          />
        </div>
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            Change Password
          </div>
          <div
            className="ModalForm__ModalBody-stjygz-1"
          >
            <form
              action="#"
              id="change-password-form"
              noValidate={true}
              onReset={[Function]}
              onSubmit={[Function]}
            >
              <div
                className="c10"
              >
                <input
                  autoComplete="password"
                  autoFocus={true}
                  className="c11 c12"
                  name="currentPassword"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="Enter the current password"
                  required={true}
                  type="password"
                  value=""
                />
                <input
                  autoComplete="new-password"
                  className="c11 c12"
                  name="newPassword"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="Enter a new password"
                  required={true}
                  type="password"
                  value=""
                />
              </div>
              <div
                className="c13"
              >
                <button
                  className="c3 c14"
                  disabled={false}
                  type="submit"
                >
                  Save
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Account/Forms/Modal Delete account 1`] = `
.c10 {
  display: block;
  border: 1px solid #e2e2e2;
  border-radius: 4px;
  box-sizing: border-box;
  font: 400 16px / 1 "Lato",sans-serif;
  outline: none;
  padding: 10px 16px;
  position: relative;
  width: 100%;
}

.c10:focus {
  border-color: #bce7f6;
  background-color: #f2fbfc;
}

.c10:hover {
  background-color: #f2fbfc;
}

.c10:invalid {
  box-shadow: none;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c3 svg + span {
  margin-left: 4px;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
  color: #fff !important;
  background-color: #f35143 !important;
  border-color: #f35143 !important;
}

.c12 svg + span {
  margin-left: 4px;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):focus {
  color: #fff !important;
  background-color: #c74237 !important;
  border-color: #c74237 !important;
}

.c12:not([disabled]):active {
  color: #fff;
  background-color: #f35143;
  border-color: #f35143;
}

.c13 {
  color: #fff;
  background-color: #0d79d0;
  border-color: #0d79d0;
}

.c13:not([disabled]):hover,
.c13:not([disabled]):focus {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c13:not([disabled]):active {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c4 {
  padding: 0;
  height: 40px;
  width: 40px;
}

.c5 {
  color: #353535;
  background-color: transparent;
  border-color: transparent;
}

.c5:not([disabled]):hover,
.c5:not([disabled]):focus {
  color: #1a9bc7;
  background-color: transparent;
  border-color: transparent;
}

.c5:not([disabled]):active {
  color: #0d79d0;
  background-color: transparent;
  border-color: transparent;
}

.c6 {
  background: #fff;
  border: 5px solid #fff !important;
  border-radius: 50%;
  box-sizing: border-box;
  box-shadow: 0 0 8px 0 rgba(0,0,0,0.12);
  display: inline-block;
  height: 40px;
  padding: 0;
  position: relative;
  width: 40px;
  -webkit-transition: border-color 0.25s;
  transition: border-color 0.25s;
}

.c6:focus,
.c6:hover {
  background: #f2fbfc !important;
}

.c6 svg {
  max-height: 16px;
  max-width: 16px;
  vertical-align: middle;
}

.c1 {
  background: #fff;
  border-radius: 8px;
  box-shadow: 0 4px 9px 0 rgba(84,83,83,0.3);
  font-family: "Lato",sans-serif;
  overflow: hidden;
  margin: 12px;
}

.c2 {
  position: absolute;
  right: 0;
  top: 0;
  z-index: 1;
}

.c7 {
  box-shadow: none;
  text-indent: -99999px;
}

.c7::before,
.c7::after {
  background-color: #6e6e6e;
  border-radius: 2px;
  content: ' ';
  display: block;
  height: 14px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  width: 2px;
  position: absolute;
  top: calc(50% - 7px);
  left: calc(50% - 1px);
}

.c7::after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c8 {
  padding: 16px;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c9 {
  font-size: 20px;
  margin-bottom: 20px;
}

.c11 {
  margin-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
  className="c0"
>
  <div>
    <div>
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <button
            className="c3 c4 c5 c6 c7"
            onClick={[Function]}
            type="button"
          />
        </div>
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            Delete account
          </div>
          <div
            className="ModalForm__ModalBody-stjygz-1"
          >
            <form
              action="#"
              id="delete-account-form"
              noValidate={true}
              onReset={[Function]}
              onSubmit={[Function]}
            >
              <input
                autoFocus={true}
                className="c10"
                name="password"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Confirm your password to delete your account"
                required={true}
                type="password"
                value=""
              />
              <div
                className="c11"
              >
                <button
                  className="c12 c13"
                  disabled={false}
                  type="submit"
                >
                  Delete Account
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Account/Forms/Modal Delete account with projects 1`] = `
.c10 {
  display: block;
  border: 1px solid #e2e2e2;
  border-radius: 4px;
  box-sizing: border-box;
  font: 400 16px / 1 "Lato",sans-serif;
  outline: none;
  padding: 10px 16px;
  position: relative;
  width: 100%;
}

.c10:focus {
  border-color: #bce7f6;
  background-color: #f2fbfc;
}

.c10:hover {
  background-color: #f2fbfc;
}

.c10:invalid {
  box-shadow: none;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c3 svg + span {
  margin-left: 4px;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
  color: #fff !important;
  background-color: #f35143 !important;
  border-color: #f35143 !important;
}

.c13 svg + span {
  margin-left: 4px;
}

.c13:not([disabled]):hover,
.c13:not([disabled]):focus {
  color: #fff !important;
  background-color: #c74237 !important;
  border-color: #c74237 !important;
}

.c13:not([disabled]):active {
  color: #fff;
  background-color: #f35143;
  border-color: #f35143;
}

.c14 {
  color: #fff;
  background-color: #0d79d0;
  border-color: #0d79d0;
}

.c14:not([disabled]):hover,
.c14:not([disabled]):focus {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c14:not([disabled]):active {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c4 {
  padding: 0;
  height: 40px;
  width: 40px;
}

.c5 {
  color: #353535;
  background-color: transparent;
  border-color: transparent;
}

.c5:not([disabled]):hover,
.c5:not([disabled]):focus {
  color: #1a9bc7;
  background-color: transparent;
  border-color: transparent;
}

.c5:not([disabled]):active {
  color: #0d79d0;
  background-color: transparent;
  border-color: transparent;
}

.c6 {
  background: #fff;
  border: 5px solid #fff !important;
  border-radius: 50%;
  box-sizing: border-box;
  box-shadow: 0 0 8px 0 rgba(0,0,0,0.12);
  display: inline-block;
  height: 40px;
  padding: 0;
  position: relative;
  width: 40px;
  -webkit-transition: border-color 0.25s;
  transition: border-color 0.25s;
}

.c6:focus,
.c6:hover {
  background: #f2fbfc !important;
}

.c6 svg {
  max-height: 16px;
  max-width: 16px;
  vertical-align: middle;
}

.c1 {
  background: #fff;
  border-radius: 8px;
  box-shadow: 0 4px 9px 0 rgba(84,83,83,0.3);
  font-family: "Lato",sans-serif;
  overflow: hidden;
  margin: 12px;
}

.c2 {
  position: absolute;
  right: 0;
  top: 0;
  z-index: 1;
}

.c7 {
  box-shadow: none;
  text-indent: -99999px;
}

.c7::before,
.c7::after {
  background-color: #6e6e6e;
  border-radius: 2px;
  content: ' ';
  display: block;
  height: 14px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  width: 2px;
  position: absolute;
  top: calc(50% - 7px);
  left: calc(50% - 1px);
}

.c7::after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c8 {
  padding: 16px;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c9 {
  font-size: 20px;
  margin-bottom: 20px;
}

.c12 {
  margin-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c11 {
  font-family: "Lato",sans-serif;
  font-size: 16px;
  color: #6e6e6e;
  margin-top: 16px;
  margin-left: 20px;
}

<div
  className="c0"
>
  <div>
    <div>
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <button
            className="c3 c4 c5 c6 c7"
            onClick={[Function]}
            type="button"
          />
        </div>
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            Delete account
          </div>
          <div
            className="ModalForm__ModalBody-stjygz-1"
          >
            <form
              action="#"
              id="delete-account-form"
              noValidate={true}
              onReset={[Function]}
              onSubmit={[Function]}
            >
              <input
                autoFocus={true}
                className="c10"
                name="password"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Confirm your password to delete your account"
                required={true}
                type="password"
                value=""
              />
              <div
                className="c11"
              >
                Deleting your account will also delete these projects
                <ul>
                  <li>
                    <div />
                  </li>
                  <li>
                    <div />
                  </li>
                </ul>
              </div>
              <div
                className="c12"
              >
                <button
                  className="c13 c14"
                  disabled={false}
                  type="submit"
                >
                  Delete Account
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Account/Forms/Pages Choose password 1`] = `
.c4 {
  display: block;
  border: 1px solid #e2e2e2;
  border-radius: 4px;
  box-sizing: border-box;
  font: 400 16px / 1 "Lato",sans-serif;
  outline: none;
  padding: 10px 16px;
  position: relative;
  width: 100%;
}

.c4:focus {
  border-color: #bce7f6;
  background-color: #f2fbfc;
}

.c4:hover {
  background-color: #f2fbfc;
}

.c4:invalid {
  box-shadow: none;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c6 svg + span {
  margin-left: 4px;
}

.c7 {
  color: #fff;
  background-color: #0d79d0;
  border-color: #0d79d0;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):focus {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c7:not([disabled]):active {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c1 {
  width: 100%;
  max-width: 450px;
}

.c2 {
  padding: 40px;
  text-align: center;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c5 {
  margin-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c3 {
  font-size: 20px;
  white-space: nowrap;
}

@media (max-width:450px) {
  .c2 {
    padding: 40px 0;
  }
}

<div
  className="c0"
>
  <div>
    <form
      action="#"
      className="c1"
      noValidate={true}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          Choose a new password
        </div>
      </div>
      <input
        autoComplete="new-password"
        autoFocus={true}
        className="c4"
        name="password"
        onBlur={[Function]}
        onChange={[Function]}
        required={true}
        type="password"
        value=""
      />
      <div
        className="c5"
      >
        <button
          className="c6 c7"
          disabled={false}
          type="submit"
        >
          Save Password
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Account/Forms/Pages Login 1`] = `
.c7 {
  display: block;
  border: 1px solid #e2e2e2;
  border-radius: 4px;
  box-sizing: border-box;
  font: 400 16px / 1 "Lato",sans-serif;
  outline: none;
  padding: 10px 16px;
  position: relative;
  width: 100%;
}

.c7:focus {
  border-color: #bce7f6;
  background-color: #f2fbfc;
}

.c7:hover {
  background-color: #f2fbfc;
}

.c7:invalid {
  box-shadow: none;
}

.c5 .c6:first-of-type {
  margin-top: 4px;
}

.c5 .c6:last-of-type {
  margin-bottom: 4px;
}

.c5 .c6:not(:first-of-type) {
  margin-top: -1px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c5 .c6:not(:last-of-type) {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  margin-bottom: 0;
}

.c5 .c6:not(:last-of-type):focus + .c6 {
  border-top-color: #bce7f6;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c12 svg + span {
  margin-left: 4px;
}

.c13 {
  color: #fff;
  background-color: #0d79d0;
  border-color: #0d79d0;
}

.c13:not([disabled]):hover,
.c13:not([disabled]):focus {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c13:not([disabled]):active {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c1 {
  width: 100%;
  max-width: 450px;
}

.c2 {
  padding: 40px;
  text-align: center;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 20px;
  margin-bottom: 20px;
  color: rgba(0,0,0,0.51);
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c11 {
  color: #0b6bb8;
  font: inherit;
  font-size: 14px;
}

.c4 {
  font-size: 280%;
  white-space: nowrap;
}

.c3 {
  font-size: 20px;
  white-space: nowrap;
}

.c10 {
  text-align: left;
}

.c8 {
  font-weight: 500;
  color: inherit;
}

@media (max-width:450px) {
  .c2 {
    padding: 40px 0;
  }
}

<div
  className="c0"
>
  <div>
    <form
      action="#"
      className="c1"
      id="login-form"
      noValidate={true}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          Welcome to
        </div>
        <div
          className="c4"
        >
          Manuscripts.io
        </div>
      </div>
      <div
        className="c5"
      >
        <input
          autoComplete="username email"
          className="c6 c7"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="email"
          required={true}
          type="email"
          value=""
        />
        <input
          autoComplete="password"
          className="c6 c7"
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="password"
          required={true}
          type="password"
          value=""
        />
      </div>
      <div>
        By signing in you agree to our
         
        <a
          className="c8"
          href="https://www.atypon.com/privacy-policy/"
        >
          Privacy policy
        </a>
        .
      </div>
      <div
        className="c9"
      >
        <div
          className="c10"
        >
          <div>
            No account? 
            <a
              className="c11"
              href="/signup"
              onClick={[Function]}
            >
              Sign up
            </a>
          </div>
          <div>
            Forgot password? 
            <a
              className="c11"
              href="/recover"
              onClick={[Function]}
            >
              Reset Password
            </a>
          </div>
        </div>
        <div>
          <button
            className="c12 c13"
            disabled={false}
            type="submit"
          >
            Sign in
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Account/Forms/Pages Recover 1`] = `
.c6 {
  display: block;
  border: 1px solid #e2e2e2;
  border-radius: 4px;
  box-sizing: border-box;
  font: 400 16px / 1 "Lato",sans-serif;
  outline: none;
  padding: 10px 16px;
  position: relative;
  width: 100%;
}

.c6:focus {
  border-color: #bce7f6;
  background-color: #f2fbfc;
}

.c6:hover {
  background-color: #f2fbfc;
}

.c6:invalid {
  box-shadow: none;
}

.c4 .c5:first-of-type {
  margin-top: 4px;
}

.c4 .c5:last-of-type {
  margin-bottom: 4px;
}

.c4 .c5:not(:first-of-type) {
  margin-top: -1px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c4 .c5:not(:last-of-type) {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  margin-bottom: 0;
}

.c4 .c5:not(:last-of-type):focus + .c5 {
  border-top-color: #bce7f6;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c8 svg + span {
  margin-left: 4px;
}

.c9 {
  color: #fff;
  background-color: #0d79d0;
  border-color: #0d79d0;
}

.c9:not([disabled]):hover,
.c9:not([disabled]):focus {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c9:not([disabled]):active {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c1 {
  width: 100%;
  max-width: 450px;
}

.c2 {
  padding: 40px;
  text-align: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 20px;
  margin-bottom: 20px;
  color: rgba(0,0,0,0.51);
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c3 {
  font-size: 20px;
  white-space: nowrap;
}

@media (max-width:450px) {
  .c2 {
    padding: 40px 0;
  }
}

<div
  className="c0"
>
  <div>
    <form
      action="#"
      className="c1"
      noValidate={true}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          Reset Password
        </div>
      </div>
      <div
        className="c4"
      >
        <input
          autoComplete="username email"
          autoFocus={true}
          className="c5 c6"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="email"
          required={true}
          type="email"
          value=""
        />
      </div>
      <div
        className="c7"
      >
        <div />
        <div>
          <button
            className="c8 c9"
            disabled={false}
            type="submit"
          >
            Send password reset
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Account/Forms/Pages Sign up 1`] = `
.c7 {
  display: block;
  border: 1px solid #e2e2e2;
  border-radius: 4px;
  box-sizing: border-box;
  font: 400 16px / 1 "Lato",sans-serif;
  outline: none;
  padding: 10px 16px;
  position: relative;
  width: 100%;
}

.c7:focus {
  border-color: #bce7f6;
  background-color: #f2fbfc;
}

.c7:hover {
  background-color: #f2fbfc;
}

.c7:invalid {
  box-shadow: none;
}

.c5 .c6:first-of-type {
  margin-top: 4px;
}

.c5 .c6:last-of-type {
  margin-bottom: 4px;
}

.c5 .c6:not(:first-of-type) {
  margin-top: -1px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c5 .c6:not(:last-of-type) {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  margin-bottom: 0;
}

.c5 .c6:not(:last-of-type):focus + .c6 {
  border-top-color: #bce7f6;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c11 svg + span {
  margin-left: 4px;
}

.c12 {
  color: #fff;
  background-color: #0d79d0;
  border-color: #0d79d0;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):focus {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c12:not([disabled]):active {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c1 {
  width: 100%;
  max-width: 450px;
}

.c2 {
  padding: 40px;
  text-align: center;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 20px;
  margin-bottom: 20px;
  color: rgba(0,0,0,0.51);
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c10 {
  color: #0b6bb8;
  font: inherit;
  font-size: 14px;
}

.c4 {
  font-size: 280%;
  white-space: nowrap;
}

.c3 {
  font-size: 20px;
  white-space: nowrap;
}

.c8 {
  font-weight: 500;
  color: inherit;
}

@media (max-width:450px) {
  .c2 {
    padding: 40px 0;
  }
}

<div
  className="c0"
>
  <div>
    <form
      action="#"
      className="c1"
      id="signup-form"
      noValidate={true}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          Manuscripts.io
        </div>
        <div
          className="c4"
        >
          Sign Up
        </div>
      </div>
      <div
        className="c5"
      >
        <input
          autoComplete="name"
          className="c6 c7"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="name"
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="c5"
      >
        <input
          autoComplete="username email"
          className="c6 c7"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="email"
          required={true}
          type="email"
          value=""
        />
        <input
          autoComplete="new-password"
          className="c6 c7"
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="password"
          required={true}
          type="password"
          value=""
        />
      </div>
      <div>
        By signing up you agree to our
         
        <a
          className="c8"
          href="https://www.atypon.com/privacy-policy/"
        >
          Privacy policy
        </a>
        .
        <br />
      </div>
      <div
        className="c9"
      >
        <div>
          Have an account? 
          <a
            className="c10"
            href="/login"
            onClick={[Function]}
          >
            Sign In
          </a>
        </div>
        <button
          className="c11 c12"
          disabled={false}
          type="submit"
        >
          Sign up
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Feedback Feedback 1`] = `
.c12 {
  display: block;
  border: 1px solid #e2e2e2;
  border-radius: 4px;
  box-sizing: border-box;
  font: 400 16px / 1 "Lato",sans-serif;
  outline: none;
  padding: 10px 16px;
  position: relative;
  width: 100%;
}

.c12:focus {
  border-color: #bce7f6;
  background-color: #f2fbfc;
}

.c12:hover {
  background-color: #f2fbfc;
}

.c12:invalid {
  box-shadow: none;
}

.c13 {
  border: 1px solid #e2e2e2;
  border-radius: 4px;
  box-sizing: border-box;
  font: 400 16px / 1 "Lato",sans-serif;
  outline: none;
  padding: 10px 16px;
  position: relative;
  width: 100%;
  max-width: 100%;
}

.c13:focus {
  border-color: #bce7f6;
  background-color: #f2fbfc;
}

.c13:hover {
  background-color: #f2fbfc;
}

.c13:invalid {
  box-shadow: none;
}

.c10 .c11:first-of-type {
  margin-top: 4px;
}

.c10 .c11:last-of-type {
  margin-bottom: 4px;
}

.c10 .c11:not(:first-of-type) {
  margin-top: -1px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c10 .c11:not(:last-of-type) {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  margin-bottom: 0;
}

.c10 .c11:not(:last-of-type):focus + .c11 {
  border-top-color: #bce7f6;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c3 svg + span {
  margin-left: 4px;
}

.c16 {
  color: #fff;
  background-color: #0d79d0;
  border-color: #0d79d0;
}

.c16:not([disabled]):hover,
.c16:not([disabled]):focus {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c16:not([disabled]):active {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c4 {
  padding: 0;
  height: 40px;
  width: 40px;
}

.c5 {
  color: #353535;
  background-color: transparent;
  border-color: transparent;
}

.c5:not([disabled]):hover,
.c5:not([disabled]):focus {
  color: #1a9bc7;
  background-color: transparent;
  border-color: transparent;
}

.c5:not([disabled]):active {
  color: #0d79d0;
  background-color: transparent;
  border-color: transparent;
}

.c6 {
  background: #fff;
  border: 5px solid #fff !important;
  border-radius: 50%;
  box-sizing: border-box;
  box-shadow: 0 0 8px 0 rgba(0,0,0,0.12);
  display: inline-block;
  height: 40px;
  padding: 0;
  position: relative;
  width: 40px;
  -webkit-transition: border-color 0.25s;
  transition: border-color 0.25s;
}

.c6:focus,
.c6:hover {
  background: #f2fbfc !important;
}

.c6 svg {
  max-height: 16px;
  max-width: 16px;
  vertical-align: middle;
}

.c1 {
  background: #fff;
  border-radius: 8px;
  box-shadow: 0 4px 9px 0 rgba(84,83,83,0.3);
  font-family: "Lato",sans-serif;
  overflow: hidden;
  margin: 12px;
}

.c2 {
  position: absolute;
  right: 0;
  top: 0;
  z-index: 1;
}

.c7 {
  box-shadow: none;
  text-indent: -99999px;
}

.c7::before,
.c7::after {
  background-color: #6e6e6e;
  border-radius: 2px;
  content: ' ';
  display: block;
  height: 14px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  width: 2px;
  position: absolute;
  top: calc(50% - 7px);
  left: calc(50% - 1px);
}

.c7::after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c8 {
  padding: 16px;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c9 {
  font-size: 20px;
  margin-bottom: 20px;
}

.c15 {
  margin-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c14 {
  margin-top: 10px;
  color: #6e6e6e;
}

<div
  className="c0"
>
  <div>
    <div>
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <button
            className="c3 c4 c5 c6 c7"
            onClick={[Function]}
            type="button"
          />
        </div>
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            Feedback
          </div>
          <div
            className="ModalForm__ModalBody-stjygz-1"
          >
            <form
              action="#"
              id="feedback-form"
              noValidate={true}
              onReset={[Function]}
              onSubmit={[Function]}
            >
              <div
                className="c10"
              >
                <input
                  autoFocus={true}
                  className="c11 c12"
                  name="title"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="Title"
                  required={true}
                  type="title"
                  value=""
                />
              </div>
              <textarea
                autoFocus={true}
                className="c13"
                id="feedback-message"
                name="message"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Please tell us how you like Manuscripts.io, and what we should improve.

If you are reporting a bug, please include steps to help us reproduce the problem you encountered."
                required={true}
                value=""
              />
              <div
                className="c14"
              >
                <label
                  htmlFor="feedback-message"
                >
                  Your feedback will be posted privately to the developers.
                </label>
              </div>
              <div
                className="c15"
              >
                <button
                  className="c3 c16"
                  disabled={false}
                  type="submit"
                >
                  Submit
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Preferences Preferences 1`] = `
.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c1 {
  display: block;
  margin-top: 20px;
}

.c2 {
  width: auto;
  margin-left: 1ch;
}

<div
  className="c0"
>
  <div>
    <form
      action="#"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <label
        className="c1"
      >
        Locale
        <select
          className="c2"
          name="locale"
          onBlur={[Function]}
          onChange={[Function]}
          required={true}
          value="en"
        >
          <option
            value="en"
          >
            English
          </option>
          <option
            value="ar"
          >
            Arabic
          </option>
        </select>
      </label>
    </form>
  </div>
</div>
`;
